<resources>
    <string name="app_name">BigHomework</string>
    <string name="account_hint">学号/职工号</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="sign_up">注册</string>
    <string name="forget_password">忘记密码</string>
    <string name="sure_password">确认密码</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="submit">提交</string>
    <string name="IP_services">IP服务</string>
    <string name="service_port">服务端口</string>
    <string name="IP_setting">IP设置</string>
    <string name="user_photo">用户照片</string>
    <string name="sign">签到</string>
    <string name="stu_find">查询成绩</string>
    <string name="gpa">绩点查询</string>
    <string name="setting">设置</string>
    <string name="information">个人信息</string>
    <string name="help">帮助</string>
    <string name="out">登出</string>
    <string name="tea_sign">发起签到</string>
    <string name="edit">编辑成绩</string>
    <string name="statistics">统计成绩</string>
    <string name="help_info">寻求帮助</string>
    <string name="head_colon">头像：</string>
    <string name="name_colon">姓名：</string>
    <string name="stu_or_tea_colon">学生/老师：</string>
    <string name="sentence_colon">个性签名：</string>
    <string name="fill_sentence">此处填入个性签名</string>
    <string name="sure">确认</string>
    <string name="stu">学生</string>
    <string name="tea">老师</string>
    <string name="input_name">此处输入你的姓名</string>
    <string name="choose_photo">从相册中选择照片</string>
    <string name="input_subject">此处输入想查询的科目</string>
    <string name="find">查询</string>
    <string name="grade_manage">成绩管理</string>
    <string name="exam_manage">考试管理</string>
    <string name="student_manage">学生管理</string>
    <string name="input_student">此处输入想查询的学生</string>
    <string name="input_stu_name">此处输入姓名</string>
    <string name="input_grade">此处输入成绩</string>
    <string name="add">添加</string>
    <string name="input_exam">此处输入查询的考试</string>
    <string name="input_exam_name">此处输入考试名称</string>
    <string name="delete">删除</string>
    <string name="input_delete">输入要删除的名称</string>
    <string name="college_colon">学院：</string>
    <string name="choose_college">请选择你的学院</string>
    <string name="computer_college">计算机学院</string>
    <string name="other">其他</string>
    <string name="environment_college">环境学院</string>
</resources>