<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".teacher.TeaSubjectActivity">
    <ImageButton
        android:id="@+id/return_button"
        android:layout_width="40sp"
        android:layout_height="40sp"

        android:src="@drawable/arrow_return"
        android:background="@color/pink"

        android:scaleType="fitXY"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/exam_manage"

        android:layout_width="416dp"
        android:layout_height="40dp"

        android:background="@color/pink"
        android:paddingLeft="20dp"
        android:paddingTop="5dp"

        android:paddingBottom="5dp"
        android:text="@string/exam_manage"
        android:textSize="20dp"
        android:textColor="@color/white"


        app:layout_constraintStart_toEndOf="@+id/return_button"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/input_exam"

        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:background="@drawable/edit_text_bg"
        android:hint="@string/input_exam"
        android:inputType="text"

        android:paddingLeft="20dp"
        android:paddingTop="10dp"

        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.158"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/return_button"
        app:layout_constraintVertical_bias="0.027"
        app:layout_constraintWidth_percent="0.6" />

    <Button
        android:id="@+id/find"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:background="@drawable/button_bg"
        android:text="@string/find"

        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.946"
        app:layout_constraintStart_toEndOf="@id/input_exam"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.084"
        app:layout_constraintWidth_percent="0.18" />

    <EditText
        android:id="@+id/input_exam_name"

        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:background="@drawable/edit_text_bg"
        android:hint="@string/input_exam_name"
        android:inputType="text"

        android:paddingLeft="20dp"
        android:paddingTop="10dp"

        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.158"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_exam"
        app:layout_constraintVertical_bias="0.023"
        app:layout_constraintWidth_percent="0.6" />



    <Button
        android:id="@+id/add"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:background="@drawable/button_bg"
        android:text="@string/add"

        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toEndOf="@id/input_exam_name"
        app:layout_constraintTop_toBottomOf="@id/find"
        app:layout_constraintVertical_bias="0.008"
        app:layout_constraintWidth_percent="0.18" />
    <EditText
        android:id="@+id/input_delete"

        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:background="@drawable/edit_text_bg"
        android:hint="@string/input_delete"
        android:inputType="text"

        android:paddingLeft="20dp"
        android:paddingTop="10dp"

        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.158"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_exam_name"
        app:layout_constraintVertical_bias="0.027"
        app:layout_constraintWidth_percent="0.6" />

    <Button
        android:id="@+id/delete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:background="@drawable/button_bg"
        android:text="@string/delete"

        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.953"
        app:layout_constraintStart_toEndOf="@id/input_delete"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.253"
        app:layout_constraintWidth_percent="0.18" />
    <ListView
        android:id="@+id/exam_list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:divider="@color/pink"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_delete"
        app:layout_constraintVertical_bias="0.05" />
</androidx.constraintlayout.widget.ConstraintLayout>