<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageButton
        android:id="@+id/return_button"
        android:layout_width="40sp"
        android:layout_height="40sp"

        android:src="@drawable/arrow_return"
        android:background="@color/pink"

        android:scaleType="fitXY"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/setting_title"

        android:layout_width="416dp"
        android:layout_height="40dp"

        android:background="@color/pink"
        android:paddingLeft="20dp"
        android:paddingTop="5dp"

        android:paddingBottom="5dp"
        android:text="@string/IP_setting"
        android:textColor="@color/white"


        app:layout_constraintStart_toEndOf="@+id/return_button"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/IP_services"

        android:hint="@string/IP_services"
        android:inputType="text"

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_bg"

        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintHorizontal_bias="0.5"

        android:paddingLeft="20dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <EditText
        android:id="@+id/service_port"

        android:hint="@string/service_port"
        android:inputType="text"

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_bg"

        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintHorizontal_bias="0.5"

        android:paddingLeft="20dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IP_services"
        android:layout_marginTop="10dp"
        />

    <Button
        android:id="@+id/submit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintVertical_bias="0.6"

        android:text = "@string/submit"
        android:textSize="16sp"
        android:textStyle="bold"
        android:background="@drawable/button_bg"
        android:textColor="@color/white"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>