<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/login_account"

        android:hint="@string/account_hint"
        android:inputType="text"

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_bg"

        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintHorizontal_bias="0.5"

        android:paddingLeft="20dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <EditText
        android:id="@+id/login_password"

        android:hint="@string/password"
        android:inputType="textPassword"

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_bg"

        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintHorizontal_bias="0.5"

        android:paddingLeft="20dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_account"
        android:layout_marginTop="10dp"
        />

    <Button
        android:id="@+id/login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintVertical_bias="0.6"

        android:text = "@string/login"
        android:textSize="16sp"
        android:textStyle="bold"
        android:background="@drawable/button_bg"
        android:textColor="@color/white"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:id="@+id/sign_up"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:background="@drawable/button_bg"
        android:text="@string/sign_up"

        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.701"
        app:layout_constraintWidth_percent="0.8" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"

        app:layout_constraintVertical_bias="0"
        app:layout_constraintHorizontal_bias="1"

        android:layout_marginTop="14dp"
        android:layout_marginRight="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/login_password"
        app:layout_constraintBottom_toBottomOf="@+id/is_remember"
        app:layout_constraintTop_toTopOf="@+id/is_remember"/>
    <CheckBox
        android:id="@+id/is_remember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="记住密码"
        android:textColor="@color/darkGray"

        app:layout_constraintVertical_bias="0"
        app:layout_constraintHorizontal_bias="0"

        android:layout_marginTop="0dp"
        android:layout_marginLeft="5dp"

        app:layout_constraintStart_toStartOf="@+id/login_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_password"/>


</androidx.constraintlayout.widget.ConstraintLayout>